--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,10 @@
 
     <string name="todo">TODO</string>
 
+    <string name="textViewReview">125 Reviews</string>
+    <string name="textViewStoryLine">Storyline</string>
+    <string name="storyLineContent">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe.</string>
+    <string name="heading">Cast</string>
+    <string name="robert_down">Cast</string>
 
 </resources>
