--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">kotlinOne</string>
     <string name="activityMainTextView1">Hello!!!!</string>
-    <string name="MovieDetailsTextViewName">Avengers: End Game</string>
+    <string name="MovieDetailsTextViewName">Avengers: \nEnd Game</string>
     <string name="path_back">Back</string>
     <string name="textViewTegLine">Action, Adventure, Fantasy</string>
     <string name="MovieDetailsTextViewSomeId">13+</string>
@@ -11,8 +11,10 @@
 
     <string name="textViewReview">125 Reviews</string>
     <string name="textViewStoryLine">Storyline</string>
-    <string name="storyLineContent">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the universe.</string>
+    <string name="storyLineContent">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
     <string name="heading">Cast</string>
-    <string name="robert_down">Cast</string>
+    <string name="robert_down">Robert Downey Jr.</string>
+    <string name="chris_evans">Chris\u00E2\u0080\u00A8Evans</string>
+    <string name="mark_ruffal">Mark\u00E2\u0080\u00A8Ruffalo</string>
 
 </resources>
