--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,13 @@
     <string name="markRuffal">Mark \nRuffalo</string>
     <string name="chrisHemsworth">Chris \nHemsworth</string>
     <string name="todo">TODO</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- fragment_movies_list -->
+    <string name="fmlWarszawaPo">Movies list</string>
+
+    <!-- strings.xml -->
+    <string name="fmlSomeId">13+</string>
+    <string name="fmlTag">Action, Adventure, Drama</string>
+    <string name="fmlTextViewMin">137 min</string>
+
 </resources>
