--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,8 +23,13 @@
     <string name="oveList">button</string>
     <string name="fragmentMovieChosenText">You chose: %1$s</string>
     <string name="frg_name_text">Robert \nDowney Jr.</string>
-    <string name="load_new_movies">Load new movies</string>
+    <string name="find_best_movie">Find the Best Movie</string>
     <string name="channel_new_messages">Best New Movie</string>
     <string name="channel_new_messages_description">The Best Movie from Load Movies</string>
+    <string name="calendar_permissions_denied">"Calendar Permissions denied"</string>
+    <string name="calendar_permission_is_required_select">"Calendar Permission is required to select the movie screening date"</string>
+    <string name="calendar_event_is_ready">"Запланирован просмотр фильма на "</string>
+
+
 
 </resources>
