--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,10 @@
     <string name="find_best_movie">Find the Best Movie</string>
     <string name="channel_new_messages">Best New Movie</string>
     <string name="channel_new_messages_description">The Best Movie from Load Movies</string>
-    <string name="calendar_permissions_denied">"Calendar Permissions denied"</string>
-    <string name="calendar_permission_is_required_select">"Calendar Permission is required to select the movie screening date"</string>
+
+    <string name="permission_denied">"Permissions denied"</string>
+    <string name="permission_is_required_select">"Permission is required to select the movie screening date"</string>
+
     <string name="calendar_event_is_ready">"Запланирован просмотр фильма на "</string>
     <string name="calendar_contract_events_title">"Фильм"</string>
     <string name="calendar_contract_events_description">"Запланирован просмотр фильма"</string>
